Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90611

Shortcut Alt+` is not working with non US layout

XMLWordPrintable

    • Linux/Wayland, Linux/X11
    • 62e697fd568f6acdae7144a58efa08990eb7d9ab (qt/qtbase/dev), 4282f9be4 (tqtc/lts-5.15)

      Was tested with RU layout. In this layout, "`" key symbol is replaced with "ё" symbol.

      Layouts configured in Settings are: us, ru.

      So the shortcut works on us layout but stops working on switching to the next ru layout. After switching back to us it works again.

      Was reported upstream: https://bugs.kde.org/show_bug.cgi?id=407703,

      so first thing I'm trying to understand if it's Qt or KWin issue.

      Possibly duplicate of https://bugreports.qt.io/browse/QTBUG-73090

      paeglis

        For Gerrit Dashboard: QTBUG-90611
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            bam80 Andrey Butirsky
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes